BugID: 10265 - Correcting word-wrap
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@60574 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/skins/oasis/css/core/WikiHeaderV2.scss
+++ b/skins/oasis/css/core/WikiHeaderV2.scss
@@ -32,7 +32,7 @@
 		@include wordmark;
 		color: $color-links;
 		margin-bottom: 10px;
-		word-break: break-all;
+        word-wrap: break-word;
 	}
 	h1:before,
 	.shadow-mask {
